fix overflow issues for smaller screens

--- a/styles/icons.css
+++ b/styles/icons.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+    width: 100%;
 
     margin-bottom: 2rem;
 }
@@ -22,8 +23,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(var(--size), 1fr));
     gap: calc(var(--size) / 2);
-
-    width: 100%;
+    width: 95%;
+    margin: 0 auto;
 }
 
 .card {
